tests/machine/x/c/group_by_join.error
line: 0
error: output mismatch
-- got --
--- Orders per customer ---
-- want --
--- Orders per customer ---
Alice orders: 2
Bob orders: 1
   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:49Z
