tests/machine/x/c/group_by_join.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:49Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int id;
  char *name;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int id;
  int customerId;
} order_t;
typedef struct {
  int len;
  order_t *data;
} order_list_t;
order_list_t create_order_list(int len) {
  order_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(order_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  char *name;
  int count;
} stats_item_t;
typedef struct {
  int len;
  stats_item_t *data;
} stats_item_list_t;
stats_item_list_t create_stats_item_list(int len) {
  stats_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(stats_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int main() {
  customer_t tmp1_data[] = {(customer_t){.id = 1, .name = "Alice"},
                            (customer_t){.id = 2, .name = "Bob"}};
  customer_list_t tmp1 = {2, tmp1_data};
  customer_list_t customers = tmp1;
  order_t tmp2_data[] = {(order_t){.id = 100, .customerId = 1},
                         (order_t){.id = 101, .customerId = 1},
                         (order_t){.id = 102, .customerId = 2}};
  order_list_t tmp2 = {3, tmp2_data};
  order_list_t orders = tmp2;
  stats_item_list_t stats = (stats_item_list_t){0, NULL};
  printf("--- Orders per customer ---\n");
  for (int tmp3 = 0; tmp3 < stats.len; tmp3++) {
    stats_item_t s = stats.data[tmp3];
    printf("%s orders: %d\n", s.name, s.count);
  }
  return 0;
}
